<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/light_purple">

        <EditText
            android:id="@+id/newCommentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="New Comment" />

        <Button
            android:id="@+id/newCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newCommentText"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="Add"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    <EditText
        android:id="@+id/editCommentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="Edit Comment" />

    <Button
        android:id="@+id/editCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newCommentText"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="Add"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    </RelativeLayout>